src/objects/IncentivePlanTemplate__c.object
<CustomObject>
    <fields>
        <fullName>BaselineMetric__c</fullName>
        <label>Baseline Metric</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractSubType__c</fullName>
        <label>Margin Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gross Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Margin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DefaultBaselineThreshold__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>Add new field to Incentive Plan Template that defines default notification thresholds for baseline budget changes.</description>
        <label>Default Baseline Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Pool_Formula__c</fullName>
        <label>Estimated Pool Formula</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeographyAllocation__c</fullName>
        <label>Geography Allocation</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>Help Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InterimPlanPaymentEligibility__c</fullName>
        <label>Interim Plan Payment Eligibility</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaxAllocationPool__c</fullName>
        <inlineHelpText>Maximum Allocation of the pool to participants at enrollment</inlineHelpText>
        <label>Max Allocation Pool %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaxComplete__c</fullName>
        <inlineHelpText>Max Project % Complete</inlineHelpText>
        <label>Max % Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaxEACDays__c</fullName>
        <inlineHelpText>Max EAC Last Update (Days)</inlineHelpText>
        <label>Max EAC Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPoolBaseline__c</fullName>
        <label>Max Pool Baseline</label>
        <picklist>
            <picklistValues>
                <fullName>Forecast NSR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaxPoolCalculation__c</fullName>
        <formula>&quot;(&quot;&amp;TEXT(MaxPoolBaseline__c)&amp;

  IF(TEXT(MaxPoolOperator1__c ) &lt;&gt; &quot;&quot;, &quot; &quot; &amp; TEXT(MaxPoolOperator1__c), null) &amp; 

IF(AND(MaxPoolPercent__c &lt; 1,MaxPoolPercent__c &gt; 0), 
&quot; &quot; &amp; TEXT(MaxPoolPercent__c*100)&amp; &quot;%)&quot;, 
IF(MaxPoolPercent__c &gt;= 1, 
&quot; &quot; &amp; TEXT(MaxPoolPercent__c)&amp;&quot;)&quot;, NULL) 
)&amp;

IF(TEXT(MaxPoolOperator__c ) = &quot;&quot;, NULL,
   &quot; &quot; &amp; TEXT(MaxPoolOperator__c) &amp;&quot; (&quot;&amp; 
   IF(AND(MaxPoolField2__c &lt; 1,MaxPoolField2__c &gt; 0), 
      TEXT(MaxPoolField2__c*100)&amp; &quot;%&quot;, 
      IF(MaxPoolField2__c &gt;=1, 
         TEXT(MaxPoolField2__c), NULL))&amp;
   IF(TEXT(MaxPoolOperator2__c ) = &quot;&quot;, NULL,
      &quot; &quot; &amp; TEXT(MaxPoolOperator2__c) &amp; &quot; &quot; &amp;
      IF(TEXT(MaxPoolField22__c ) &lt;&gt; &quot;&quot;, &quot; &quot; &amp; TEXT(MaxPoolField22__c)&amp; &quot;)&quot;, null))
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Pool Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxPoolCap__c</fullName>
        <label>Max Pool Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxPoolField22__c</fullName>
        <label>Max Pool Field 2.2</label>
        <picklist>
            <picklistValues>
                <fullName>Adjusted % Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaxPoolField2__c</fullName>
        <label>Max Pool Field 2.1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPoolOperator1__c</fullName>
        <label>Max Pool Operator</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>/</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaxPoolOperator2__c</fullName>
        <label>Max Pool Operator</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>/</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaxPoolOperator__c</fullName>
        <description>Operator needed to connect and add an additional expression.</description>
        <inlineHelpText>Operator needed to connect and add an additional expression.</inlineHelpText>
        <label>Max Pool Operator</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>/</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaxPoolPercent__c</fullName>
        <label>Max Pool %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPool__c</fullName>
        <inlineHelpText>Maximum Incentive Pool size</inlineHelpText>
        <label>Max Pool</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MinAllocationAmount__c</fullName>
        <inlineHelpText>Minimum Participant $ Allocation Allowable (Max Pool x Participant %)</inlineHelpText>
        <label>Min Allocation $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinAllocationPer__c</fullName>
        <inlineHelpText>Minimum Participant % Allocation Allowable</inlineHelpText>
        <label>Min Allocation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MinNSRBudget__c</fullName>
        <inlineHelpText>Min NSR Budget</inlineHelpText>
        <label>Min NSR Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrgString__c</fullName>
        <label>OrgString</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipantEligibility__c</fullName>
        <inlineHelpText>Participant Eligibility</inlineHelpText>
        <label>Participant Eligibility</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanCriteria__c</fullName>
        <label>Plan Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProfitSharingDetails__c</fullName>
        <label>Profit Sharing Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProfitSharingPercent__c</fullName>
        <label>Profit Sharing %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledEndDateNotLessThanDays__c</fullName>
        <defaultValue>90</defaultValue>
        <inlineHelpText>Enter the amount of days the incentive Project Scheduled End Date cannot be less than.
(i.e. End Date can Not be Less than 90 Days from TODAY)</inlineHelpText>
        <label>Scheduled End Date Not Less Than Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThresholdBaseline__c</fullName>
        <label>Threshold Baseline</label>
        <picklist>
            <picklistValues>
                <fullName>Baseline GM % of NSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseline NM % of NSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross Margin Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Margin Dollars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThresholdCalculation__c</fullName>
        <formula>TEXT(ThresholdBaseline__c) &amp; 
IF(TEXT(ThresholdOperator1__c) &lt;&gt; &quot;&quot;, &quot; &quot; &amp; TEXT(ThresholdOperator1__c), null) &amp; 

IF(AND(ThresholdPercent__c &lt; 3,ThresholdPercent__c &gt; 0),
   &quot; &quot; &amp; TEXT(ThresholdPercent__c*100)&amp; &quot;%&quot;,
   IF(ThresholdPercent__c &gt; 2,
      &quot; $&quot; &amp; TEXT(ThresholdPercent__c), NULL)
   )</formula>
        <label>Threshold Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThresholdOperator1__c</fullName>
        <label>Threshold Operator 1</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>/</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThresholdPercent__c</fullName>
        <label>Threshold %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <inlineHelpText>Threshold above which an incentive can be earned</inlineHelpText>
        <label>Threshold</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VarianceAlert__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>1) Need to have a configurable alert threshold. 
If the baseline this week (after latest Insight data feed) is different from the baseline from last week by &gt; x%, we want the alert to fire.</description>
        <label>Variance Alert</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Incentive Plan Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>GeographyAllocation__c</columns>
        <columns>MaxPool__c</columns>
        <columns>Threshold__c</columns>
        <columns>ThresholdBaseline__c</columns>
        <columns>BaselineMetric__c</columns>
        <columns>ThresholdOperator1__c</columns>
        <columns>ThresholdPercent__c</columns>
        <columns>ProfitSharingPercent__c</columns>
        <columns>PlanCriteria__c</columns>
        <columns>ContractType__c</columns>
        <columns>ContractSubType__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Time_and_Material</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>GeographyAllocation__c</columns>
        <columns>MaxPool__c</columns>
        <columns>MaxPoolCap__c</columns>
        <columns>Threshold__c</columns>
        <columns>ThresholdBaseline__c</columns>
        <columns>BaselineMetric__c</columns>
        <columns>ThresholdOperator1__c</columns>
        <columns>ThresholdPercent__c</columns>
        <columns>ProfitSharingPercent__c</columns>
        <columns>PlanCriteria__c</columns>
        <columns>ContractType__c</columns>
        <columns>ContractSubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractType__c</field>
            <operation>equals</operation>
            <value>Time &amp; Material</value>
        </filters>
        <label>All Time and Material</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_Mass_Edit</fullName>
        <columns>NAME</columns>
        <columns>ContractType__c</columns>
        <columns>ContractSubType__c</columns>
        <columns>GeographyAllocation__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>ProfitSharingPercent__c</columns>
        <columns>Threshold__c</columns>
        <columns>ThresholdBaseline__c</columns>
        <columns>ThresholdPercent__c</columns>
        <columns>ThresholdCalculation__c</columns>
        <filterScope>Everything</filterScope>
        <label>DTW Admin Mass Edit</label>
        <language>en_US</language>
        <sharedTo>
            <group>DTW_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Incentive Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Plan Template</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>